objects/HUDAMIData__c.object
<CustomObject>
    <description>To store data related to Area Median Income (AMI) for various regions, including details such as area names, county names, FIPS codes, and HUD-specific identifiers for HUD AMI calculations.</description>
    <fields>
        <fullName>Areaname__c</fullName>
        <description>HUD Income Limit Area Name</description>
        <label>Area name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountyName__c</fullName>
        <description>HUD Income Limit - Official County Name</description>
        <label>County Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIPScode__c</fullName>
        <description>Federal Information Processing System Code</description>
        <label>FIPS code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUDANameZipCodeNameID__c</fullName>
        <description>Primary Client Address Zip Code</description>
        <label>HUD A Name (Zip Code Name/ID) (DO NOT US</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSA__c</fullName>
        <description>HUD Income Limit Metropolitan Statistical Area</description>
        <label>MSA</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedianFamilyIncome__c</fullName>
        <description>Median Family Income (MFI) for area</description>
        <label>Median Family Income</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateCode__c</fullName>
        <label>State code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateName__c</fullName>
        <description>Name of US State or Territory Client Case is taking place in</description>
        <label>State Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TownName__c</fullName>
        <description>Town Name for Income Limit purposes</description>
        <label>Town Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <formula>TownName__c+&apos;-&apos;+CountyName__c+&apos;-&apos;+Zipcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Fiscal Year of current AMI data</description>
        <label>Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>il30p1__c</fullName>
        <description>Income Limit for Extremely Low Income (30% AMI), 1 Persons in Household</description>
        <label>il30 p1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>il30p2__c</fullName>
        <description>Income Limit for Extremely Low Income (30% AMI), 2 Persons in Household</description>
        <label>il30 p2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>il30p3__c</fullName>
        <description>Income Limit for Extremely Low Income (30% AMI), 3 Persons in Household</description>
        <label>il30 p3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>il_metro_name__c</fullName>
        <label>Metro Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HUD AMI Data</label>
    <nameField>
        <label>HUD AMI Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HUD AMI Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>